--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "firebase/php-jwt": "^5.1",
         "jaeger/querylist": "^4.1",
         "phpmailer/phpmailer": "^6.1",
-        "php-amqplib/php-amqplib": "^2.11"
+        "php-amqplib/php-amqplib": "^2.11",
+        "topthink/think-view": "^1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
